# dj-rest

./: .gitignore  README.md  pyproject.toml
common/: exception_handlers.py  models.py  permissions.py  utils.py  validators.py  views.py
common/migrations/: 0001_initial.py
config/: settings.py  urls.py
mainapp/: admin.py  apps.py  di.py  exceptions.py  filters.py  permissions.py  urls.py
mainapp/apis/: customers.py
mainapp/fixtures/: customers.json
mainapp/management/commands/: createpermissions.py
mainapp/models/: colleauge.py  customer.py  permission.py
mainapp/serializers/: customers.py  token.py
mainapp/services/: customer.py
mainapp/tests/: test_customer_api.py  test_token_api.py
mainapp/views/: customers.py
